[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-utils"
version = "0.1.0"
description = "Lightweight Python helpers for an OpenAI-compatible Codex relay"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["codex_utils"]
